test/parser/multiple-decimal-marks.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:14: error: expected identifier, got number
var pi = 3.1.4;
